# Swigar_PAL_Agent

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/debug-dashboard/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
apps/debug-dashboard/src/: App.tsx  main.tsx  styles.css
apps/debug-dashboard/src/components/: AgentWorkbench.tsx  ArchitectureMap.tsx  DecisionPanel.tsx  DemoConsole.tsx  Header.tsx  HeroSection.tsx  LoginOverlay.tsx  ModulePanel.tsx  PaperArchitectureLive.tsx  PaperModuleInspector.tsx  QuestionCard.tsx  WorkflowTimeline.tsx
data/: question_bank.json
eval/: paper_results_20260517_132636.csv  paper_results_dissertation_20260517.csv  results_full_20260516_160925.csv  results_full_20260516_161411.csv  results_rule_no_memory_20260516_161711.csv  results_rule_no_memory_20260516_161751.csv  results_rule_no_memory_20260516_161831.csv  results_rule_no_memory_20260517_132636.csv  results_rule_with_memory_20260516_163147.csv  results_rule_with_memory_20260516_183303.csv  summary_full_20260516_160925.md  summary_full_20260516_161411.md  summary_rule_no_memory_20260516_161711.md  summary_rule_no_memory_20260516_161751.md  summary_rule_no_memory_20260516_161831.md  summary_rule_no_memory_20260517_132018.md  summary_rule_no_memory_20260517_132636.md  summary_rule_no_memory_20260517_132748.md  summary_rule_with_memory_20260516_163147.md  summary_rule_with_memory_20260516_183303.md
scripts/: demo_loop.py  dev_all.ps1  eval_dissertation.py  migrate_question_bank.py  run_api.ps1  run_api_workbench.ps1  stop_api.ps1  stop_dev_all.ps1  sync_question_bank.py  verify_llm.py  verify_system.py
services/api/: pyproject.toml
services/api/swigar_api/: __init__.py  answer_queue.py  config.py  db.py  db_ready.py  main.py  paper_stores.py  stores.py
services/api/swigar_api/routes/: papers.py
services/api/tests/: conftest.py  test_api.py  test_integration_loop.py
skills/: paper_assembly_validation_skill.md  question_generation_skill.md  question_validation_skill.md
tests/: test_cross_paper_dedupe.py  test_paper_assembly_modes.py
(+10 files in other folders)
