[project]
name = "swigar-agent"
version = "0.1.0"
description = "AI-driven gamified English learning agent platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "openai>=1.40.0",
    "onnxruntime>=1.16.0",
    "mempalace",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.4.0", "httpx>=0.27.0"]

[tool.uv.sources]
mempalace = { path = "mempalace-reference", editable = true }

[tool.setuptools]
packages = [
    "swigar_core",
    "swigar_memory",
    "swigar_events",
    "swigar_tools",
    "swigar_skills",
    "swigar_orchestrator",
    "swigar_api",
]

[tool.setuptools.package-dir]
swigar_core = "packages/swigar_core/swigar_core"
swigar_memory = "packages/swigar_memory/swigar_memory"
swigar_events = "packages/swigar_events/swigar_events"
swigar_tools = "packages/swigar_tools/swigar_tools"
swigar_skills = "packages/swigar_skills/swigar_skills"
swigar_orchestrator = "packages/swigar_orchestrator/swigar_orchestrator"
swigar_api = "services/api/swigar_api"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services/api/tests"]
